feat(#): añadir cambio de cursor en mouse over las tarjetas y nuevo archivo php para el evento click sobre las tarjetas

--- a/styles/css/sports_selection.css
+++ b/styles/css/sports_selection.css
@@ -22,6 +22,9 @@ html {
 .deportes-seleccion-listado {
   list-style-type: none; }
 
+.card:hover {
+  cursor: pointer; }
+
 .card {
   font-size: 1em;
   overflow: hidden;
