--- a/styles/scss/sports_selection.scss
+++ b/styles/scss/sports_selection.scss
@@ -39,8 +39,11 @@ html{
     list-style-type: none;
 }
 
-.deportes-moda{
+.deportes-moda:hover{
     
+}
+.card:hover{
+    cursor: pointer;
 }
 
 .card {
