--- a/styles/css/half-slider.css
+++ b/styles/css/half-slider.css
@@ -74,6 +74,22 @@
   margin-top: 4px;
   margin-left: 4px; }
 
+/*--------------- CART BUTTON ----------------*/
+.nav-item__carro {
+  color: tomato;
+  background-color: white;
+  border: 0px;
+  padding-top: 10px;
+  margin-left: 20px; }
+
+.nav-item__carro:hover {
+  cursor: pointer;
+  color: #0069D9;
+  background-color: white; }
+
+.nav-item__carro__contador {
+  margin-left: 20px; }
+
 /*========================== MAIN HEADER =============================*/
 .bg-main-header-custom {
   background-color: rgba(255, 255, 255, 0.99);
