--- a/styles/css/carro.css
+++ b/styles/css/carro.css
@@ -22,7 +22,7 @@
 
 .carrito__item__imagen {
   display: flex;
-  flex-grow: 3;
+  flex-grow: 4;
   width: 100px;
   height: 100px;
   justify-content: center;
@@ -40,11 +40,11 @@
 
 .carrito__item__descripcion {
   margin: 10px;
-  flex-grow: 3; }
+  flex-grow: 1; }
 
 .carrito__item__horario {
   margin: 10px;
-  flex-grow: 3; }
+  flex-grow: 1; }
 
 .carrito__item__precio {
   margin: 10px;
@@ -78,3 +78,6 @@
 .modal-header {
   background-color: #4285F4;
   color: white; }
+
+hr {
+  height: 3px; }
